merge:changes from categories